--- a/Index.html
+++ b/Index.html
@@ -6,7 +6,7 @@
     <meta name="viewport">
     <title>Station Layout</title>
     <link rel="stylesheet" href="../style/style.css">
-    <script src="./app.js"></script>
+    <script src="/src/main/app.js"></script>
 </head>
 
 <body>
