--- a/src/station/UNL.html
+++ b/src/station/UNL.html
@@ -5,7 +5,7 @@
 <head>
     <title>UNL.html</title>
     <meta charset="utf-8" />
-    <script src="app.js"></script>
+    <script src="../main/app.js"></script>
 </head>
 
 <body>
