--- a/Index.html
+++ b/Index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport">
     <title>Station Layout</title>
-    <link rel="stylesheet" href="../style/style.css">
+    <link rel="stylesheet" href="../src/style/style.css">
     <script src="/src/main/app.js"></script>
 </head>
 
