--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport">
     <title>Station Layout</title>
-    <link rel="stylesheet" href="../src/style/style.css">
-    <script src="/src/main/app.js"></script>
+    <link rel="stylesheet" href="./src/style/style.css">
+    <script src="./src/main/app.js"></script>
 </head>
 
 <body>
