--- a/src/station/KUH.html
+++ b/src/station/KUH.html
@@ -6,10 +6,11 @@
     <title>KUH.html</title>
     <meta charset="utf-8" />
     <script src="../main/app.js"></script>
+    <link rel="stylesheet" href="../style/style.css">
 </head>
 
 <body>
-    <div id="backToHome">
+    <div class="backToHome">
         <button class="bckbtn" onclick="backToHome()">Back</button>
     </div>
     <div class="mxgraph" style="max-width:100%;border:1px solid transparent;"
